--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <p>Player 2</p>
         <img class="img2" src="./images/dice6.png">
       </div>
+      
+      <div class="dice">
+        <p>Player 3</p>
+        <img class="img2" src="./images/dice6.png">
+      </div>
+      
+      <div class="dice">
+        <p>Player 4</p>
+        <img class="img2" src="./images/dice6.png">
+      </div>
 
     </div>
     <script src="dice.js"></script>
